add more inform and card

--- a/index.html
+++ b/index.html
@@ -40,8 +40,10 @@
     <!-- wow js script -->
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script> -->
 
+    <!-- Aos js -->
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <!-- Aos csss -->
-    <!-- <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet"> -->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
 </head>
 
@@ -115,7 +117,7 @@
                 <p>Browse the huge variety of our best seller</p>
             </div>
             <div class="rows">
-                <div class="cols-3">
+                <div class="cols-3" data-aos="fade-in">
                     <div class="cards">
                         <div class="card-img-1 c-img-0">
                             <img src="a1.jpg" alt="">
@@ -138,7 +140,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="cols-3">
+                <div class="cols-3" data-aos="fade-out">
                     <div class="cards">
                         <div class="card-img-1 c-img-1">
                             <img src="a4.jpg" alt="">
@@ -161,7 +163,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="cols-3">
+                <div class="cols-3" data-aos="zoom-in">
                     <div class="cards">
                         <div class="card-img-1 c-img-2">
                             <img src="a3.jpg" alt="">
@@ -184,7 +186,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="cols-3">
+                <div class="cols-3" data-aos="zoom-out">
                     <div class="cards">
                         <div class="card-img-1 c-img-3">
                             <img src="a2.jpg" alt="">
@@ -207,7 +209,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="cols-3">
+                <div class="cols-3" data-aos="fade-down">
                     <div class="cards">
                         <div class="card-img-1 c-img-4">
                             <img src="a7.jpg" alt="">
@@ -230,7 +232,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="cols-3">
+                <div class="cols-3" data-aos="fade-up">
                     <div class="cards">
                         <div class="card-img-1 c-img-5">
                             <img src="a9.jpg" alt="">
@@ -253,7 +255,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="cols-3">
+                <div class="cols-3" data-aos="zoom-in">
                     <div class="cards">
                         <div class="card-img-1 c-img-6">
                             <img src="a15.jpg" alt="">
@@ -276,7 +278,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="cols-3">
+                <div class="cols-3" data-aos="fade-up">
                     <div class="cards">
                         <div class="card-img-1 c-img-7">
                             <img src="a14.jpg" alt="">
@@ -311,7 +313,7 @@
             <div class="best-seller-heading center">
                 <h1>Best Offers</h1>
             </div>
-            <div class="best-slick">
+            <div class="best-slick" data-aos="flip-left">
                 <div class="card-1">
                     <div class="card-img-1">
                         <img src="a9.jpg" alt="">
@@ -431,6 +433,91 @@
 
     <!-- discover the new things  -->
 
+    <div class="our-services">
+        <div class="bg-sticky">
+            <div class="container-1">
+                <div class="rows">
+                    <div class="cols-6 d-full">
+                        <div class="our-services-heading center">
+                            <p>Our Services</p>
+                            <h1>StyleWay!</h1>
+                        </div>
+                        <div class="rows">
+                            <div class="cols-6">
+                                <div class="service-card .service-card-col" data-aos="zoom-out">
+                                    <div class="service-logo" data-aos="fade-fliip">
+                                        <img src="serviceimg-1.png" alt="">
+                                    </div>
+                                    <div class="service-info">
+                                        <h2>Free Delivery</h2>
+                                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat,
+                                            cupiditate?
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="cols-6">
+                                <div class="service-card .service-card-col" data-aos="zoom-out">
+                                    <div class="service-logo" data-aos="fade-fliip">
+                                        <img src="serviceimg-1.png" alt="">
+                                    </div>
+                                    <div class="service-info">
+                                        <h2>Free Delivery</h2>
+                                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat,
+                                            cupiditate?
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="cols-6">
+                                <div class="service-card .service-card-col" data-aos="zoom-out">
+                                    <div class="service-logo" data-aos="fade-fliip">
+                                        <img src="serviceimg-1.png" alt="">
+                                    </div>
+                                    <div class="service-info">
+                                        <h2>Free Delivery</h2>
+                                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat,
+                                            cupiditate?
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="cols-6">
+                                <div class="service-card .service-card-col" data-aos="zoom-out">
+                                    <div class="service-logo" data-aos="fade-fliip">
+                                        <img src="serviceimg-1.png" alt="">
+                                    </div>
+                                    <div class="service-info">
+                                        <h2>Free Delivery</h2>
+                                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat,
+                                            cupiditate?
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="cols-6 d-n"></div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- discover the best value -->
+    <div class="discover best-seller">
+        <div class="container-1">
+            <div class="best-seller-heading center">
+                <h1>Discover the Best Value Deals</h1>
+                <p>Browse the huge variety of our best seller Browse the huge variety of our best seller</p>
+            </div>
+            <div class="three-tabs center">
+                <li><a href="mens">Men's</a></li>
+                <li><a href="Womens">Women's</a></li>
+                <li><a href="kids">Kid's</a></li>
+            </div>
+        </div>
+    </div>
+
     <!-- off in  tops -->
 
     <!-- Diwali offers sell with sticky full image with caption and three tabs -->
@@ -527,8 +614,8 @@
                 {
                     breakpoint: 600,
                     settings: {
-                        slidesToShow: 1,
-                        slidesToScroll: 1
+                        slidesToShow: 2,
+                        slidesToScroll: 2
                     }
                 },
                 {
@@ -541,6 +628,16 @@
             ]
 
         });
+
+        // discover-best seller slick
+
+
+
+
+
+        // Aos
+
+        AOS.init();
     </script>
 
     <script src="jquery.js"></script>
