--- a/index.html
+++ b/index.html
@@ -75,7 +75,13 @@
                 <li><a href="#">Home</a></li>
                 <li><a href="#">About</a></li>
                 <li><a href="#">Product</a></li>
-                <li><a href="#">More</a></li>
+                <li><a href="#">More<i class="fa fa-angle-down"></i></a>
+                    <ul class="dropdown-ul">
+                        <li><a href="#">Men's</a></li>
+                        <li><a href="#">Women's</a></li>
+                        <li><a href="#">Kid's</a></li>
+                    </ul>
+                </li>
                 <li><a href="#">Contact</a></li>
             </ul>
             <div class="icons">
@@ -511,7 +517,7 @@
                 <p>Browse the huge variety of our best seller Browse the huge variety of our best seller</p>
             </div>
             <div class="three-tabs center">
-                <li><a href="mens">Men's</a></li>
+                <li><a href="mens.html">Men's</a></li>
                 <li><a href="Womens">Women's</a></li>
                 <li><a href="kids">Kid's</a></li>
             </div>
@@ -531,6 +537,61 @@
     <!-- follow pages -->
 
     <!-- list of details in footer -->
+    <footer>
+        <div class="rows">
+            <div class="cols-3 k">
+                <div class="footer-head">
+                    <img src="logo.jpg" alt="">
+                </div>
+                <ul class="footer-ul">
+                    <li>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus illum nam eaque, ab
+                            optio laboriosam rem numquam deleniti ipsa commodi!</p>
+                    </li>
+                </ul>
+            </div>
+            <div class="cols-3">
+                <div class="footer-head">
+                    <h2>Information</h2>
+                </div>
+                <ul class="footer-ul">
+                    <li><a href="#"> My Account</a></li>
+                    <li><a href="#"> Support Center</a></li>
+                    <li><a href="#">Term & Condition</a></li>
+                    <li><a href="#">Returns & Exchanges</a></li>
+                    <li><a href="#">Shipping & Delivery</a></li>
+                </ul>
+            </div>
+            <div class="cols-3">
+                <div class="footer-head">
+                    <h2>Quick Shop</h2>
+                </div>
+                <ul class="footer-ul">
+                    <li><a href="#">Womens</a></li>
+                    <li><a href="#">Mens</a></li>
+                    <li><a href="#">Kids Collection</a></li>
+                    <li><a href="#">Accessories</a></li>
+                    <li><a href="#">New Arrivals</a></li>
+                </ul>
+            </div>
+            <div class="cols-3 k">
+                <div class="footer-head">
+                    <h2>Contact Us</h2>
+                </div>
+                <ul class="footer-ul">
+                    <li><a href="#">Noida sector 51 , India</a></li>
+                    <li><a href="#">+91 8874262123</a></li>
+                    <li><a href="#">zahidkhan00786@gmail.com</a></li>
+                </ul>
+                <div class="icons footer-icon">
+                    <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                    <li><a href="#"><i class="fa fa-instagram"></i></a></li>
+                    <li><a href="#"><i class="fa fa-youtube"></i></a></li>
+                    <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                </div>
+            </div>
+        </div>
+    </footer>
 
     <!-- end of footer -->
 
