add image in mens

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 <li><a href="#">Product</a></li>
                 <li><a href="#">More<i class="fa fa-angle-down"></i></a>
                     <ul class="dropdown-ul">
-                        <li><a href="#">Men's</a></li>
+                        <li><a href="mens.html">Men's</a></li>
                         <li><a href="#">Women's</a></li>
                         <li><a href="#">Kid's</a></li>
                     </ul>
@@ -309,7 +309,6 @@
                 </div>
             </div>
         </div>
-    </div>
     </div>
 
     <!-- best seller with carousel -->
