--- a/mens.html
+++ b/mens.html
@@ -113,6 +113,117 @@
 
     <!-- best seller  -->
 
+    <div class="best-seller">
+        <div class="container-1">
+            <div class="best-seller-heading center">
+                <h1>Best Offer on Men's Collection</h1>
+                <p>Browse the huge variety of our best seller</p>
+            </div>
+            <div class="rows">
+                <div class="cols-6">
+                    <div class="card-2">
+                        <img src="r4.jpg" alt="">
+                    </div>
+                    <div class="card-content">
+                        <h2>Neck Tank Top</h2>
+                        <span class="price">Rs. 799</span>
+                        <div class="star-icons">
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                        </div>
+                    </div>
+                </div>
+                <div class="cols-6">
+                    <div class="card-2">
+                        <img src="r5.jpg" alt="">
+                    </div>
+                    <div class="card-content">
+                        <h2>Neck Tank Top</h2>
+                        <span class="price">Rs. 799</span>
+                        <div class="star-icons">
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                        </div>
+                    </div>
+                </div>
+                <div class="cols-3">
+                    <div class="card-2">
+                        <img src="r4.jpg" alt="">
+                    </div>
+                    <div class="card-content">
+                        <h2>Neck Tank Top</h2>
+                        <span class="price">Rs. 799</span>
+                        <div class="star-icons">
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                        </div>
+                    </div>
+                </div>
+                <div class="cols-3">
+                    <div class="card-2">
+                        <img src="r5.jpg" alt="">
+                    </div>
+                    <div class="card-content">
+                        <h2>Neck Tank Top</h2>
+                        <span class="price">Rs. 799</span>
+                        <div class="star-icons">
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                        </div>
+                    </div>
+                </div>
+                <div class="cols-3">
+                    <div class="card-2">
+                        <img src="r4.jpg" alt="">
+                    </div>
+                    <div class="card-content">
+                        <h2>Neck Tank Top</h2>
+                        <span class="price">Rs. 799</span>
+                        <div class="star-icons">
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                        </div>
+                    </div>
+                </div>
+                <div class="cols-3">
+                    <div class="card-2">
+                        <img src="r5.jpg" alt="">
+                    </div>
+                    <div class="card-content">
+                        <h2>Neck Tank Top</h2>
+                        <span class="price">Rs. 799</span>
+                        <div class="star-icons">
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+
+
+
 
 
 
