--- a/mens.html
+++ b/mens.html
@@ -216,6 +216,38 @@
                         </div>
                     </div>
                 </div>
+                <div class="cols-6">
+                    <div class="card-2">
+                        <img src="r4.jpg" alt="">
+                    </div>
+                    <div class="card-content">
+                        <h2>Neck Tank Top</h2>
+                        <span class="price">Rs. 799</span>
+                        <div class="star-icons">
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                        </div>
+                    </div>
+                </div>
+                <div class="cols-6">
+                    <div class="card-2">
+                        <img src="r5.jpg" alt="">
+                    </div>
+                    <div class="card-content">
+                        <h2>Neck Tank Top</h2>
+                        <span class="price">Rs. 799</span>
+                        <div class="star-icons">
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
