--- a/index.html
+++ b/index.html
@@ -599,7 +599,7 @@
             </div>
             <div class="three-tabs center">
                 <li><a href="mens.html">Men's</a></li>
-                <li><a href="Womens">Women's</a></li>
+                <li><a href="women.html">Women's</a></li>
                 <li><a href="kids">Kid's</a></li>
             </div>
         </div>
@@ -608,7 +608,55 @@
     <!-- off in  tops -->
 
 
-    <!-- why you shop with us  icons and pragraph-->
+    <!-- testimonial -->
+    <div class="testimonial">
+        <div class="container-1">
+            <div class="testimonial-slick">
+                <div class="box">
+                    <div class="testi-pro">
+                        <img src="testimonial-1.png" alt="">
+                    </div>
+                    <div class="box-body">
+                        <h2>john David</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt, dolorum beatae quisquam
+                            dolor quis impedit itaque! Neque, iure! Fuga, quisquam.</p>
+                    </div>
+                </div>
+
+                <div class="box">
+                    <div class="testi-pro">
+                        <img src="testimonial-1.png" alt="">
+                    </div>
+                    <div class="box-body">
+                        <h2>john David</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt, dolorum beatae quisquam
+                            dolor quis impedit itaque! Neque, iure! Fuga, quisquam.</p>
+                    </div>
+                </div>
+
+                <div class="box">
+                    <div class="testi-pro">
+                        <img src="testimonial-1.png" alt="">
+                    </div>
+                    <div class="box-body">
+                        <h2>john David</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt, dolorum beatae quisquam
+                            dolor quis impedit itaque! Neque, iure! Fuga, quisquam.</p>
+                    </div>
+                </div>
+                <div class="box">
+                    <div class="testi-pro">
+                        <img src="testimonial-1.png" alt="">
+                    </div>
+                    <div class="box-body">
+                        <h2>john David</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt, dolorum beatae quisquam
+                            dolor quis impedit itaque! Neque, iure! Fuga, quisquam.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <!-- main page  -->
 
@@ -773,6 +821,41 @@
         // discover-best seller slick
 
 
+
+        // best seller slick
+        $('.testimonial-slick').slick({
+            dots: false,
+            infinite: false,
+            speed: 300,
+            slidesToShow: 3,
+            slidesToScroll: 3,
+            responsive: [
+                {
+                    breakpoint: 1024,
+                    settings: {
+                        slidesToShow: 3,
+                        slidesToScroll: 3,
+                        infinite: true,
+                        dots: false
+                    }
+                },
+                {
+                    breakpoint: 600,
+                    settings: {
+                        slidesToShow: 1,
+                        slidesToScroll: 1
+                    }
+                },
+                {
+                    breakpoint: 480,
+                    settings: {
+                        slidesToShow: 1,
+                        slidesToScroll: 1
+                    }
+                }
+            ]
+
+        });
 
 
 
