--- a/index.html
+++ b/index.html
@@ -612,7 +612,7 @@
     <div class="testimonial">
         <div class="container-1">
             <div class="testimonial-slick">
-                <div class="box">
+                <div class="testi-box">
                     <div class="testi-pro">
                         <img src="testimonial-1.png" alt="">
                     </div>
@@ -623,7 +623,7 @@
                     </div>
                 </div>
 
-                <div class="box">
+                <div class="testi-box">
                     <div class="testi-pro">
                         <img src="testimonial-1.png" alt="">
                     </div>
@@ -634,7 +634,7 @@
                     </div>
                 </div>
 
-                <div class="box">
+                <div class="testi-box">
                     <div class="testi-pro">
                         <img src="testimonial-1.png" alt="">
                     </div>
@@ -644,7 +644,7 @@
                             dolor quis impedit itaque! Neque, iure! Fuga, quisquam.</p>
                     </div>
                 </div>
-                <div class="box">
+                <div class="testi-box">
                     <div class="testi-pro">
                         <img src="testimonial-1.png" alt="">
                     </div>
