--- a/index.html
+++ b/index.html
@@ -530,7 +530,7 @@
                             <h1>StyleWay!</h1>
                         </div>
                         <div class="rows">
-                            <div class="cols-6">
+                            <div class="cols-6 col-100">
                                 <div class="service-card .service-card-col" data-aos="zoom-out">
                                     <div class="service-logo" data-aos="fade-fliip">
                                         <img src="serviceimg-1.png" alt="">
@@ -543,7 +543,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="cols-6">
+                            <div class="cols-6 col-100">
                                 <div class="service-card .service-card-col" data-aos="zoom-out">
                                     <div class="service-logo" data-aos="fade-fliip">
                                         <img src="serviceimg-1.png" alt="">
@@ -556,7 +556,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="cols-6">
+                            <div class="cols-6 col-100">
                                 <div class="service-card .service-card-col" data-aos="zoom-out">
                                     <div class="service-logo" data-aos="fade-fliip">
                                         <img src="serviceimg-1.png" alt="">
@@ -569,7 +569,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="cols-6">
+                            <div class="cols-6 col-100">
                                 <div class="service-card .service-card-col" data-aos="zoom-out">
                                     <div class="service-logo" data-aos="fade-fliip">
                                         <img src="serviceimg-1.png" alt="">
